 - Fix for bug 22918: Deal with possible absent ThreadState instance
 - Fix for bug 22921: Added null guard to prevent NPE
 - Fix for bug 22920: Added null guard to prevent NPE
 - Fix for bug 22891: Added null guard
 - Fix for bug 22890: Added null guard
 - Fix for bug 22883: Added missing reseller interfaces

* 2012-09-04 - thorben.betten@open-xchange.com

 - Fix for bug 22886: Read and write support for ISO-2022-CN charset
 - Fix for bug 22884: Set appropriate content type
 - Fix for bug 22777: Fixed possible NPE when saving a draft
 - Fix for bug 22882: Prevent possible NPE
 - Fix for bug 22880: Prevent possible NPE

* 2012-09-03 - thorben.betten@open-xchange.com

 - Fix for bug 22889: No keep-alive run if very first request body chunk not yet received

* 2012-08-31 - marcus.klein@open-xchange.com

 - Fix for bug 22751: Registering properly the actions for the conversion HTTP/JSON interface within dispatcher.

* 2012-08-29 - thorben.betten@open-xchange.com

 - Fix for bug 22860: Prevent NPE in file management

* 2012-08-24 - jan.bauerdick@open-xchange.com

 - Fix for bug 22838: New implementation of com.openexchange.sessiond.impl.SessionHandler.merge

* 2012-08-20 - marcus.klein@open-xchange.com

 - Fix for bug 22803: Parse escaped characters properly from PO file without entering an endless loop.

* 2012-08-19 - thorben.betten@open-xchange.com

 - Fix for bug 22776: Set property "set-jaxb-validation-event-handler" to "false" to turn off the validation event handler.
 - Fix for bug 22735: Enable parsing of TNEF parts

* 2012-08-18 - thorben.betten@open-xchange.com

 - Fix for bug 22783: Respond unsupported auto-login feature as common "Invalid cookie." error
 - Fix for bug 22794: Applying proper map to created ListLsubEntryImpl instance to reflect its subscription status
 - Fix for bug 22795: Keep right instance of AJAXRequestData that is further used by dispatcher processing

* 2012-08-15 - marcus.klein@open-xchange.com
