@@ -7,6 +7,7 @@
  - Fix for bug 22891: Added null guard
  - Fix for bug 22890: Added null guard
  - Fix for bug 22883: Added missing reseller interfaces
+ - Fix for bug 22928: Fixed activator of bundle 'com.openexchange.user.copy'
 
 * 2012-09-04 - thorben.betten@open-xchange.com
 
